# Local-Variable-Manager

./: .gitignore  README.md  setup.cfg  setup.py  token.lvmanager
localVariableManager/: main.py  manager.py
lvmanager/: main.py  manager.py
