[metadata]
name = Local Variable Manager [LVM]
version = 1.0.1
author = Sid Premkumar
author-email = sid.premkumar@gmail.com
home-page = https://sidpremkumar.com
description = CLI tool to manage local key/certs and token.
long-description = file: README.md
license = MIT
license-file = COPYING
platform = any
keywords = {keywords}
classifiers =
    License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7

[options]
include_package_data = true
python_requires = >= 3.7
packages = LocalVariableManager
setup_requires =
    setuptools
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
# install_requires =
# 	{install_requires}



